# android-controller

./: .env.example  .gitignore  README.md  pyproject.toml
acc_core/: __init__.py  config.py  exceptions.py
acc_core/adb/: __init__.py  app.py  client.py  device.py  files.py  input.py  screen.py  shell.py  ui.py
acc_core/agent/: __init__.py  callbacks.py  executor.py  loop.py  safety.py
acc_core/claude/: __init__.py  client.py  history.py  prompts.py  tools.py
acc_core/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py
acc_core/utils/: image.py  logging.py  text.py
cli/: chat.py  config_cmd.py  device_cmd.py  display.py  goal.py  main.py  screenshot.py  session_store.py  ui_dump.py  web.py
docs/: GETTING_STARTED.md  gettingstartednnoob.md
tests/: conftest.py
tests/test_adb/: test_client.py  test_input.py
tests/test_agent/: test_executor.py  test_loop.py  test_safety.py
tests/test_claude/: test_history.py  test_providers.py  test_tools.py
tests/test_cli/: test_commands.py
tests/test_web/: test_models.py
web/: manage.py
web/controller/: admin.py  apps.py  callbacks.py  forms.py  models.py  tasks.py  urls.py  views.py
web/controller/migrations/: 0001_initial.py
web/controller/templates/controller/: base.html  dashboard.html  device_detail.html  device_list.html  session_chat.html  session_confirm_delete.html  session_create.html  session_list.html
web/web/: asgi.py  settings.py  urls.py  wsgi.py
